feat: 优化解锁功能，支持任意天数解锁 - 重构unlock-status组件，支持动态显示解锁按钮 - 实现通用解锁方法，支持解锁任意天数 - 优化组件间通信和状态管理

--- a/pages/todo/index.wxml
+++ b/pages/todo/index.wxml
@@ -55,7 +55,10 @@
     </view>
   </view>
   
-  <unlock-status />
+  <unlock-status 
+    currentDay="{{currentDay}}" 
+    bind:unlock="handleUnlockDay"
+  />
   
   <!-- 滑动容器 - 绑定触摸事件 -->
   <view 
