--- a/pages/todo/index.wxss
+++ b/pages/todo/index.wxss
@@ -1246,4 +1246,18 @@
   color: #999;
 }
 
+.unlock-status-container {
+  background-color: white;
+  border-radius: 16rpx;
+  padding: 20rpx 30rpx;
+  margin: 20rpx 0;
+  box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.05);
+}
+
+.unlock-status-text {
+  font-size: 28rpx;
+  color: #333;
+  font-weight: 500;
+}
+
 /* ... existing code ... */ 
