--- a/pages/todo/index.wxss
+++ b/pages/todo/index.wxss
@@ -276,6 +276,24 @@
   margin-bottom: 16rpx;
 }
 
+.task-locked-status {
+  margin: 16rpx 0;
+  padding: 8rpx 16rpx;
+  background-color: #FFF0F0;
+  border-radius: 8rpx;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.task-locked-status text {
+  color: #FF4D4F;
+  font-size: 24rpx;
+  font-weight: 500;
+  text-align: center;
+}
+
 /* 新增：打卡记录列表 */
 .records-list {
   display: flex;
